--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,16 @@
   text-align: center;
 }
 
-.App-logo {
+.sign {
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  min-width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +20,50 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+.Scene {
+  /* background-color: #282c34; */
+  min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Scene img {
+    height: 95vmin;
 }
+
+.button-strip {
+  position: fixed;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100vw;
+}
+
+.button-strip button {
+  height: 50px;
+  margin-right: 2vw;
+}
+
+.top-text {
+  height: 5vmin;
+  color: white;
+  position: sticky;
+  top: 0;
+  left: 0;
+  background-color: #282c34;
+  width: 100vw;
+
+}
+
+.top-text p {
+  margin: 0;
+}
+
+
