--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,40 @@
   margin-right: 2vw;
 }
 
+.text-box {
+  width: 15vw;
+  min-height: 25vh;
+  position: fixed;
+  top: 10vh;
+  left: 2.5vw;
+  background-color: white;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  border: 1px solid black;
+  padding: 1em;
+}
+
+
+
+.text-box.show {
+  animation: fadeIn 0.9s ease-out forwards;
+}
+.text-box.fade {
+  animation: fadeOut 0.6s ease-in forwards;
+}
+
+@keyframes fadeIn {
+  0%    { opacity: 0; }
+  100%  { opacity: 1; }
+}
+
+@keyframes fadeOut {
+  0%    { opacity: 1; }
+  100%  { opacity: 0; }
+}
+
+
+
 .top-text {
   height: 5vmin;
   color: white;
@@ -60,11 +94,4 @@
   left: 0;
   background-color: #282c34;
   width: 100vw;
-
 }
-
-.top-text p {
-  margin: 0;
-}
-
-
