--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,7 @@
 #closeUP {
   opacity: 0;
 }
+#expandedPostcardFrontId,
 #PhoneHand text,
 #doorPath_,
 #ENDcALL_Image,
@@ -182,6 +183,5 @@
 #Call1_Image {
   cursor: pointer;
 }
-
 
 
